@@ -1,7 +1,7 @@
-﻿#region netDxf library, Copyright (C) 2009-2018 Daniel Carvajal (haplokuon@gmail.com)
+﻿#region netDxf library, Copyright (C) 2009-2019 Daniel Carvajal (haplokuon@gmail.com)
 
 //                        netDxf library
-// Copyright (C) 2009-2018 Daniel Carvajal (haplokuon@gmail.com)
+// Copyright (C) 2009-2019 Daniel Carvajal (haplokuon@gmail.com)
 // 
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -2068,7 +2068,8 @@ namespace netDxf.IO
                         }
                         if (!color.UseTrueColor)
                             color = AciColor.FromCadIndex(index);
-
+                        if (color == AciColor.ByLayer || color == AciColor.ByBlock)
+                            color = AciColor.Default;
                         this.chunk.Next();
                         break;
                     case 420: // the layer uses true color
